test/parse/expr/bad-loadglobal-too-many.txt
;;; ERROR: 1
(module (global i32)
  (func (load_global 0 (nop))))
(;; STDERR ;;;
parse/expr/bad-loadglobal-too-many.txt:3:24: syntax error, unexpected (, expecting )
;;; STDERR ;;)
